--- a/public/css/input.css
+++ b/public/css/input.css
@@ -56,5 +56,60 @@
       left: 0;
       z-index: -1;
   } */
+
+  $dark-color: #333a4d;
+$arrow-color: #fff;
+
+  .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .line-container {
+    width: 1px;
+    height: 44px;
+    position: relative;
+    margin-bottom: 100px;
+  
+  }
+  .line {
+    position: absolute;
+    width: 2px;
+    height: 0px;
+    background-color: $arrow-color;
+    top: 0;
+    bottom: initial;
+    animation: line-animation 2.5s ease-in-out 0s infinite normal; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  .line::before {
+    content: ' ';
+    width: 16px;
+    height: 16px;
+    border-right: 3px solid $arrow-color;
+    border-bottom: 3px solid $arrow-color;
+    transform: rotate(45deg);
+    display: block;
+    position: absolute;
+    bottom: 0;
+    animation: arrow-animation 2.5s ease-in-out 0s infinite normal; 
+  }
+  @keyframes line-animation {
+    0% {height: 0px; top: 0px; opacity: 0;}
+    50% {height: 44px; top: 0px; opacity: 1;}
+    100% {height: 0px; top: 44px; opacity: 0;}
+  }
+  
+  @keyframes arrow-animation {
+    0% {opacity: 0}
+    50% {opacity: 1}
+    100% {opacity: 0}
+  }
     
   }
