--- a/public/css/output.css
+++ b/public/css/output.css
@@ -740,6 +740,10 @@ select {
   z-index: 0;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -988,6 +992,10 @@ select {
   margin-bottom: 2.5rem;
 }
 
+.mb-9 {
+  margin-bottom: 2.25rem;
+}
+
 .block {
   display: block;
 }
@@ -1040,6 +1048,10 @@ select {
   height: 1.5rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -1054,10 +1066,6 @@ select {
 
 .h-4 {
   height: 1rem;
-}
-
-.h-full {
-  height: 100%;
 }
 
 .h-3 {
@@ -1714,6 +1722,11 @@ select {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-cyan-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(6 182 212 / var(--tw-bg-opacity));
@@ -1734,19 +1747,14 @@ select {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-100 {
+.bg-red-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-50 {
+.bg-red-50 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 252 232 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
 }
 
 .bg-green-400 {
@@ -1772,11 +1780,6 @@ select {
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 
 .bg-gray-300 {
@@ -2311,13 +2314,18 @@ select {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.text-gray-900 {
+.text-gray-100 {
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .text-transparent {
   color: transparent;
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .text-gray-800 {
@@ -2340,9 +2348,9 @@ select {
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
-.text-gray-100 {
+.text-gray-900 {
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .text-red-500 {
@@ -2418,11 +2426,6 @@ select {
 .text-cyan-500 {
   --tw-text-opacity: 1;
   color: rgb(6 182 212 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2697,6 +2700,123 @@ select {
       left: 0;
       z-index: -1;
   } */
+
+$dark-color: #333a4d;
+
+$arrow-color: #fff;
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.line-container {
+  width: 1px;
+  height: 44px;
+  position: relative;
+  margin-bottom: 100px;
+}
+
+.line {
+  position: absolute;
+  width: 2px;
+  height: 0px;
+  background-color: $arrow-color;
+  top: 0;
+  bottom: initial;
+  -webkit-animation: line-animation 2.5s ease-in-out 0s infinite normal;
+          animation: line-animation 2.5s ease-in-out 0s infinite normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.line::before {
+  content: ' ';
+  width: 16px;
+  height: 16px;
+  border-right: 3px solid $arrow-color;
+  border-bottom: 3px solid $arrow-color;
+  transform: rotate(45deg);
+  display: block;
+  position: absolute;
+  bottom: 0;
+  -webkit-animation: arrow-animation 2.5s ease-in-out 0s infinite normal;
+          animation: arrow-animation 2.5s ease-in-out 0s infinite normal;
+}
+
+@-webkit-keyframes line-animation {
+  0% {
+    height: 0px;
+    top: 0px;
+    opacity: 0;
+  }
+
+  50% {
+    height: 44px;
+    top: 0px;
+    opacity: 1;
+  }
+
+  100% {
+    height: 0px;
+    top: 44px;
+    opacity: 0;
+  }
+}
+
+@keyframes line-animation {
+  0% {
+    height: 0px;
+    top: 0px;
+    opacity: 0;
+  }
+
+  50% {
+    height: 44px;
+    top: 0px;
+    opacity: 1;
+  }
+
+  100% {
+    height: 0px;
+    top: 44px;
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes arrow-animation {
+  0% {
+    opacity: 0
+  }
+
+  50% {
+    opacity: 1
+  }
+
+  100% {
+    opacity: 0
+  }
+}
+
+@keyframes arrow-animation {
+  0% {
+    opacity: 0
+  }
+
+  50% {
+    opacity: 1
+  }
+
+  100% {
+    opacity: 0
+  }
+}
 
 .placeholder\:italic::-moz-placeholder {
   font-style: italic;
