--- a/public/css/output.css
+++ b/public/css/output.css
@@ -740,10 +740,6 @@ select {
   z-index: 0;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .col-span-3 {
   grid-column: span 3 / span 3;
 }
@@ -856,6 +852,10 @@ select {
   margin-top: 0.5rem;
 }
 
+.mb-9 {
+  margin-bottom: 2.25rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -870,6 +870,10 @@ select {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-6 {
@@ -910,10 +914,6 @@ select {
 
 .mr-4 {
   margin-right: 1rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .-mb-10 {
@@ -990,10 +990,6 @@ select {
 
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.mb-9 {
-  margin-bottom: 2.25rem;
 }
 
 .block {
@@ -1090,6 +1086,10 @@ select {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-72 {
+  height: 18rem;
 }
 
 .h-96 {
@@ -2711,13 +2711,6 @@ $arrow-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.line-container {
-  width: 1px;
-  height: 44px;
-  position: relative;
-  margin-bottom: 100px;
 }
 
 .line {
