--- a/public/css/output.css
+++ b/public/css/output.css
@@ -848,6 +848,11 @@ select {
   margin-bottom: 1.25rem;
 }
 
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
